--- a/unidades.html
+++ b/unidades.html
@@ -32,7 +32,8 @@
             <h2 class="h2_index">Unidades desarrolladas</h2>
             <details>
                 <summary>Unidad I - Programación</summary>
-                <a class="trabajo1" target="_blank" href="">LMS personalizado</a>
+                <a class="trabajo1" target="_blank" href="https://www.canva.com/design/DAGknw1X5s4/Z-TLVgGnijlJu2GjJNb3RA/edit?utm_content=DAGknw1X5s4&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">LMS personalizado</a>
+                <a class="trabajo1" target="_blank" href="https://www.canva.com/design/DAGknvvs0TM/8v4mwvGhtMcabP-MEzPE8A/edit?utm_content=DAGknvvs0TM&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">LMS personalizado</a>
                 <a class="trabajo2" target="_blank" href="https://docs.google.com/document/d/1v-5_ohQ-1PHOF108CaflZNsiz1m8C0SiV4pMM0nNhLA/edit?usp=sharing">Estrategias metodológicas</a>
                 <a class="trabajo3" target="_blank" href="https://docs.google.com/document/d/1RFzgaqDW3H6Gt2oWQMGUKE5SRXMeEcvq44OnSnQkTBU/edit?usp=sharing">Plan de clase constructivista</a>
                 <a class="trabajo4" target="_blank" href="https://docs.google.com/document/d/1oP-_upiDb9k2-vjnJXYVqn_Nu3WH9fbCcHQdhnKYV7A/edit?usp=sharing">La evaluación - Alicia Camilloni</a>
@@ -65,4 +66,5 @@
         <p>Copyright &copy; 2025</p>
     </footer>
 </body>
+
 </html>
