--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </a>
         <a href="./materias.html" class="cartas" id="c1">
             <div class="img_cartas">
-                <img class="imgs" src="https://images.pexels.com/photos/8297361/pexels-photo-8297361.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
+                <img class="imgs" src="./img/Materias.jpg" alt="">
             </div>
             <div class="info_cartas">
                 <h2 class="h2_intro">Materias</h2>
@@ -62,7 +62,7 @@
         </a>
         <a href="./unidades.html" class="cartas" id="c2">
             <div class="img_cartas">
-                <img class="imgs" src="https://images.pexels.com/photos/5427815/pexels-photo-5427815.jpeg?auto=compress&cs=tinysrgb&w=600 alt="">
+                <img class="imgs" src="./Img/Unidades.jpg" alt="">
             </div>
             <div class="info_cartas">
                 <h2 class="h2_intro">Unidades desarrolladas</h2>
