--- a/unidades.html
+++ b/unidades.html
@@ -30,41 +30,49 @@
     <main>
         <div class="main_unidades">
             <h2 class="h2_index">Unidades desarrolladas</h2>
-            <details>
-                <summary>Unidad I - Programación</summary>
-                <a class="trabajo1" target="_blank" href="https://www.canva.com/design/DAGknw1X5s4/Z-TLVgGnijlJu2GjJNb3RA/edit?utm_content=DAGknw1X5s4&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">LMS personalizado</a>
-                <a class="trabajo1" target="_blank" href="https://www.canva.com/design/DAGknvvs0TM/8v4mwvGhtMcabP-MEzPE8A/edit?utm_content=DAGknvvs0TM&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">LMS personalizado</a>
-                <a class="trabajo2" target="_blank" href="https://docs.google.com/document/d/1v-5_ohQ-1PHOF108CaflZNsiz1m8C0SiV4pMM0nNhLA/edit?usp=sharing">Estrategias metodológicas</a>
-                <a class="trabajo3" target="_blank" href="https://docs.google.com/document/d/1RFzgaqDW3H6Gt2oWQMGUKE5SRXMeEcvq44OnSnQkTBU/edit?usp=sharing">Plan de clase constructivista</a>
-                <a class="trabajo4" target="_blank" href="https://docs.google.com/document/d/1oP-_upiDb9k2-vjnJXYVqn_Nu3WH9fbCcHQdhnKYV7A/edit?usp=sharing">La evaluación - Alicia Camilloni</a>
-                <a class="trabajo5" target="_blank" href="https://docs.google.com/spreadsheets/d/1GALzIZufJh9IN_OipXaH4wmZhwg7xUjKIG6JKwoxKaA/edit?usp=sharing">La evaluación - Santos Guerra</a>
-                <a class="trabajo1" target="_blank" href="https://view.genially.com/6859c0b96f873023e2251d45/interactive-content-escape-room">Escape Room</a>
-                <a class="trabajo2" target="_blank" href="https://www.canva.com/design/DAGol-fsyDE/4yFdtVkA7-s2Rf6JvKsHxg/edit?utm_content=DAGol-fsyDE&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"> Evaluación co-construcción</a>
-            </details>
-            <details>
-                <summary>Unidad II - Organizadores Didácticos</summary>
-                <a class="trabajo1" target="_blank" href="https://sd-1922363-h00001.ferozo.net/moodle/pluginfile.php/20900/mod_resource/content/1/CompetenciasDocentes_Ant_B3_C%20grupos.pdf">Manejo de grupos</a>
-                <a class="trabajo2" target="_blank" href="https://sd-1922363-h00001.ferozo.net/moodle/pluginfile.php/20903/mod_resource/content/1/Sistema%20Did%C3%A1ctico-%20Graciela%20Ricco.pdf">Sistema didáctico - Graciela Ricco</a>
-                <a class="trabajo3" target="_blank" href="https://www.canva.com/design/DAGH1OphpYU/g6nuZD934IW6ZLN8y-qw0A/edit">Transposición didáctica - Graciela Ricco</a>
-                <a class="trabajo4" target="_blank" href="">Portfolio digital</a>
-            </details>
-            <details>
-                <summary>Unidad III - El Aula Espacio de Aprender y Enseñar</summary>
-                <a class="trabajo1" target="_blank" href="https://docs.google.com/document/d/1vT47oWbNsEN0jLAm37JU6juqBXnEeJn8vK4O_V5Hqxw/edit?usp=sharing">Informe sobre la visión institucional</a>
-                <a class="trabajo2" target="_blank" href="https://docs.google.com/document/d/14lhooUfP_ssCUoAXUVYbNBTU-qmZibcG/edit?usp=sharing&ouid=104216023067897198948&rtpof=true&sd=true">Planes de clase</a>
-                <a class="trabajo3" target="_blank" href="https://docs.google.com/document/d/1wERFizHdvU4t8kapDBKNy3hfJLmaM1Vb/edit?usp=sharing&ouid=104216023067897198948&rtpof=true&sd=true">Elementos de evaluación</a>
-                <a class="trabajo4" target="_blank" href="https://docs.google.com/document/d/1_puS0SiT9bkbDGVRoZF1JTCsAKv5qwag/edit?usp=sharing&ouid=104216023067897198948&rtpof=true&sd=true">Soportes digitales</a>
-            </details>
-            <details>
-                <summary>Unidad IV - Sistematización</summary>
-                <a class="trabajo1" target="_blank" href="https://docs.google.com/document/d/18TSFbT8xf8VaVBJNpv2BNSq2rntRTAWA/edit?usp=sharing&ouid=104216023067897198948&rtpof=true&sd=true">Informe sobre el dictado de clases</a>
-                <a class="trabajo2" target="_blank" href="https://www.canva.com/design/DAG3lozePME/Mz9i2QKfLNL3QKRJvNeYuQ/edit?utm_content=DAG3lozePME&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Presentación - Informe sobre el dictado de clases</a>
-            </details>
+            <div class="contenedor-unidades">
+                <div class="lista-unidades">
+                    <details>
+                        <summary>Unidad I - Programación</summary>
+                        <a class="trabajo1" target="_blank" href="https://www.canva.com/design/DAGknvvs0TM/Nvrn97QWPWC3hIZbpe95pA/view">LMS personalizado</a>
+                        <a class="trabajo1" target="_blank" href="https://www.canva.com/design/DAGknw1X5s4/NfHJb2Jnbds_6tpNA7BRzw/view">LMS personalizado</a>
+                        <a class="trabajo2" target="_blank" href="https://docs.google.com/document/d/1v-5_ohQ-1PHOF108CaflZNsiz1m8C0SiV4pMM0nNhLA/edit?usp=sharing">Estrategias metodológicas</a>
+                        <a class="trabajo3" target="_blank" href="https://docs.google.com/document/d/1RFzgaqDW3H6Gt2oWQMGUKE5SRXMeEcvq44OnSnQkTBU/edit?usp=sharing">Plan de clase constructivista</a>
+                        <a class="trabajo4" target="_blank" href="https://docs.google.com/document/d/1oP-_upiDb9k2-vjnJXYVqn_Nu3WH9fbCcHQdhnKYV7A/edit?usp=sharing">La evaluación - Alicia Camilloni</a>
+                        <a class="trabajo5" target="_blank" href="https://docs.google.com/spreadsheets/d/1GALzIZufJh9IN_OipXaH4wmZhwg7xUjKIG6JKwoxKaA/edit?usp=sharing">La evaluación - Santos Guerra</a>
+                        <a class="trabajo1" target="_blank" href="https://view.genially.com/6859c0b96f873023e2251d45/interactive-content-escape-room">Escape Room</a>
+                        <a class="trabajo2" target="_blank" href="https://www.canva.com/design/DAGol-fsyDE/4yFdtVkA7-s2Rf6JvKsHxg/edit?utm_content=DAGol-fsyDE&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"> Evaluación co-construcción</a>
+                    </details>
+                    <details>
+                        <summary>Unidad II - Organizadores Didácticos</summary>
+                        <a class="trabajo1" target="_blank" href="https://sd-1922363-h00001.ferozo.net/moodle/pluginfile.php/20900/mod_resource/content/1/CompetenciasDocentes_Ant_B3_C%20grupos.pdf">Manejo de grupos</a>
+                        <a class="trabajo2" target="_blank" href="https://sd-1922363-h00001.ferozo.net/moodle/pluginfile.php/20903/mod_resource/content/1/Sistema%20Did%C3%A1ctico-%20Graciela%20Ricco.pdf">Sistema didáctico - Graciela Ricco</a>
+                        <a class="trabajo3" target="_blank" href="https://www.canva.com/design/DAGH1OphpYU/g6nuZD934IW6ZLN8y-qw0A/edit">Transposición didáctica - Graciela Ricco</a>
+                        <a class="trabajo4" target="_blank" href="">Portfolio digital</a>
+                    </details>
+                    <details>
+                        <summary>Unidad III - El Aula Espacio de Aprender y Enseñar</summary>
+                        <a class="trabajo1" target="_blank" href="https://docs.google.com/document/d/1vT47oWbNsEN0jLAm37JU6juqBXnEeJn8vK4O_V5Hqxw/edit?usp=sharing">Informe sobre la visión institucional</a>
+                        <a class="trabajo2" target="_blank" href="https://docs.google.com/document/d/14lhooUfP_ssCUoAXUVYbNBTU-qmZibcG/edit?usp=sharing&ouid=104216023067897198948&rtpof=true&sd=true">Planes de clase</a>
+                        <a class="trabajo3" target="_blank" href="https://docs.google.com/document/d/1wERFizHdvU4t8kapDBKNy3hfJLmaM1Vb/edit?usp=sharing&ouid=104216023067897198948&rtpof=true&sd=true">Elementos de evaluación</a>
+                        <a class="trabajo4" target="_blank" href="https://docs.google.com/document/d/1_puS0SiT9bkbDGVRoZF1JTCsAKv5qwag/edit?usp=sharing&ouid=104216023067897198948&rtpof=true&sd=true">Soportes digitales</a>
+                    </details>
+                    <details>
+                        <summary>Unidad IV - Sistematización</summary>
+                        <a class="trabajo1" target="_blank" href="https://docs.google.com/document/d/18TSFbT8xf8VaVBJNpv2BNSq2rntRTAWA/edit?usp=sharing&ouid=104216023067897198948&rtpof=true&sd=true">Informe sobre el dictado de clases</a>
+                        <a class="trabajo2" target="_blank" href="https://www.canva.com/design/DAG3lozePME/Mz9i2QKfLNL3QKRJvNeYuQ/edit?utm_content=DAG3lozePME&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Presentación - Informe sobre el dictado de clases</a>
+                    </details>
+                </div>
+                <div class="visor-documento">
+                    <iframe id="visor" src="" frameborder="0" allowfullscreen></iframe>
+                    <p id="mensaje-visor">Selecciona un documento para previsualizarlo aquí.</p>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
         <p>Copyright &copy; 2025</p>
     </footer>
 </body>
-
+<script src="./js/script.js"></script>
 </html>
