--- a/unidades.html
+++ b/unidades.html
@@ -41,7 +41,7 @@
                         <a class="trabajo4" target="_blank" href="https://docs.google.com/document/d/1oP-_upiDb9k2-vjnJXYVqn_Nu3WH9fbCcHQdhnKYV7A/edit?usp=sharing">La evaluación - Alicia Camilloni</a>
                         <a class="trabajo5" target="_blank" href="https://docs.google.com/spreadsheets/d/1GALzIZufJh9IN_OipXaH4wmZhwg7xUjKIG6JKwoxKaA/edit?usp=sharing">La evaluación - Santos Guerra</a>
                         <a class="trabajo1" target="_blank" href="https://view.genially.com/6859c0b96f873023e2251d45/interactive-content-escape-room">Escape Room</a>
-                        <a class="trabajo2" target="_blank" href="https://www.canva.com/design/DAGol-fsyDE/4yFdtVkA7-s2Rf6JvKsHxg/edit?utm_content=DAGol-fsyDE&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"> Evaluación co-construcción</a>
+                        <a class="trabajo2" target="_blank" href="https://www.canva.com/design/DAGol-fsyDE/l2b-dX0TcntN70-LtdI9sA/view"> Evaluación co-construcción</a>
                     </details>
                     <details>
                         <summary>Unidad II - Organizadores Didácticos</summary>
@@ -60,7 +60,7 @@
                     <details>
                         <summary>Unidad IV - Sistematización</summary>
                         <a class="trabajo1" target="_blank" href="https://docs.google.com/document/d/18TSFbT8xf8VaVBJNpv2BNSq2rntRTAWA/edit?usp=sharing&ouid=104216023067897198948&rtpof=true&sd=true">Informe sobre el dictado de clases</a>
-                        <a class="trabajo2" target="_blank" href="https://www.canva.com/design/DAG3lozePME/Mz9i2QKfLNL3QKRJvNeYuQ/edit?utm_content=DAG3lozePME&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Presentación - Informe sobre el dictado de clases</a>
+                        <a class="trabajo2" target="_blank" href="https://www.canva.com/design/DAG3lozePME/9X2J4gqb8JO1xNRsm0Xj2Q/view">Presentación - Informe sobre el dictado de clases</a>
                     </details>
                 </div>
                 <div class="visor-documento">
