--- a/presentacion.html
+++ b/presentacion.html
@@ -54,9 +54,9 @@
             </div>
             <div class="main_img_practica">
                 <img src="./Img/ISES1.jpg" alt="Foto escuela 1" class="img_practicas" id="img1">
-                <img src="" alt="Foto escuela 2" class="img_practicas" id="img2">
-                <img src="" alt="Foto escuela 3" class="img_practicas" id="img3">
-                <img src="" alt="Foto escuela 4" class="img_practicas" id="img4">
+                <img src="./Img/ISES2.jpg" alt="Foto escuela 2" class="img_practicas" id="img2">
+                <img src="./Img/ISES3.jpg" alt="Foto escuela 3" class="img_practicas" id="img3">
+                <img src="./Img/ISES4.jpg" alt="Foto escuela 4" class="img_practicas" id="img4">
             </div>
         </div>
     </main>
